solved day 23 part 1, part 2 needs a refactor to work

--- a/Day 23 - Coprocessor Conflagration.ipynb
+++ b/Day 23 - Coprocessor Conflagration.ipynb
@@ -24,16 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['set b 57', 'set c b', 'jnz a 2', 'jnz 1 5', 'mul b 100', 'sub b -100000']"
+       "['set b 57',\n",
+       " 'set c b',\n",
+       " 'jnz a 2',\n",
+       " 'jnz 1 5',\n",
+       " 'mul b 100',\n",
+       " 'sub b -100000',\n",
+       " 'set c b',\n",
+       " 'sub c -17000',\n",
+       " 'set f 1',\n",
+       " 'set d 2']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +52,327 @@
     "with open('puzzle_inputs/day23_input.txt') as f:\n",
     "    data = f.read().strip().split(\"\\n\")\n",
     "puzzle_input = [line for line in data]\n",
-    "puzzle_input[:6]"
+    "puzzle_input[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(puzzle_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(defaultdict(int,\n",
+       "             {'a': 0,\n",
+       "              'b': 57,\n",
+       "              'c': 57,\n",
+       "              'd': 57,\n",
+       "              'e': 57,\n",
+       "              'f': 0,\n",
+       "              'g': 0,\n",
+       "              'h': 1}),\n",
+       " 3025)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def part_one(instructions, verbose=False):\n",
+    "    \"\"\"goes through instructions and perfoms them as per part one\"\"\"\n",
+    "    \n",
+    "    registers = defaultdict(int)\n",
+    "    i = 0\n",
+    "    total_instructions = len(instructions)\n",
+    "    mul_runs = 0\n",
+    "    \n",
+    "    while i >=0 and i < total_instructions:\n",
+    "        \n",
+    "        # first, parse instruction\n",
+    "        f = instructions[i].split()\n",
+    "        if verbose: print(i, f)\n",
+    "        func = f[0]\n",
+    "        \n",
+    "        try:\n",
+    "            x = int(f[1])\n",
+    "        except:\n",
+    "            x = f[1]\n",
+    "\n",
+    "        if len(f) == 3:\n",
+    "            try:\n",
+    "                y = int(f[2])\n",
+    "            except:\n",
+    "                y = f[2]\n",
+    "        \n",
+    "        # now to run the func code\n",
+    "        if func == \"set\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] = y\n",
+    "        elif func == \"add\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] += y\n",
+    "        elif func == \"mul\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] = registers[x] * y\n",
+    "            mul_runs += 1\n",
+    "        elif func == \"sub\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] -= y\n",
+    "        elif func == \"jnz\":\n",
+    "            x = registers[x] if type(x) is str else x\n",
+    "            if x != 0:\n",
+    "                i += registers[y] if type(y) is str else y\n",
+    "                if verbose: print(f\"jumping to {i}\")\n",
+    "                # now to skip the i += step below\n",
+    "                continue\n",
+    "                \n",
+    "        i += 1\n",
+    "\n",
+    "    return registers, mul_runs\n",
+    "\n",
+    "part_one(puzzle_input, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`3025` is the answer for part one\n",
+    "\n",
+    "# --- Part Two ---\n",
+    "\n",
+    "Now, it's time to fix the problem.\n",
+    "\n",
+    "The debug mode switch is wired directly to register a. You flip the switch, which makes register a now start at 1 when the program is executed.\n",
+    "\n",
+    "Immediately, the coprocessor begins to overheat. Whoever wrote this program obviously didn't choose a very efficient implementation. You'll need to optimize the program if it has any hope of completing before Santa needs that printer working.\n",
+    "\n",
+    "The coprocessor's ultimate goal is to determine the final value left in register h once the program completes. Technically, if it had that... it wouldn't even need to run the program.\n",
+    "\n",
+    "After setting register a to 1, if the program were to run to completion, what value would be left in register h?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 16667, 'g': 2})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 33334, 'g': 33334})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 50000, 'g': -5700})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 2, 'e': 66667, 'g': 66667})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 2, 'e': 83333, 'g': 60966})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 2, 'e': 100000, 'g': 2})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 10968, 'g': -94732})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 27635, 'g': -22798})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 44301, 'g': 132903})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 60968, 'g': -44732})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 77635, 'g': 127202})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 94301, 'g': 282903})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 5269, 'g': 4})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 21936, 'g': 21936})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 38602, 'g': 4})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 55269, 'g': 55269})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 71935, 'g': 182040})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 88602, 'g': 4})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 105269, 'g': 105269})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 16237, 'g': -24520})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 32903, 'g': -72797})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 49570, 'g': 142145})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 66236, 'g': 331180})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 82903, 'g': -22797})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 99570, 'g': 392145})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 10537, 'g': -42478})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 27204, 'g': 6})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 43871, 'g': 43871})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 60537, 'g': 257522})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 77204, 'g': 6})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 93871, 'g': 93871})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 4839, 'g': -71834})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 21505, 'g': -84195})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 38172, 'g': 161497})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 54838, 'g': 383866})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 71505, 'g': -34195})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 88172, 'g': 511497})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 104838, 'g': 733866})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 15806, 'g': 8})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 32473, 'g': 32473})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 49139, 'g': 287412})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 65806, 'g': 8})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 82473, 'g': 82473})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 99139, 'g': 687412})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 10107, 'g': 90963})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 26774, 'g': -78926})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 43441, 'g': 285260})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 60107, 'g': 540963})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 76774, 'g': -28926})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 93441, 'g': 735260})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 4408, 'g': -61620})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 21075, 'g': 21075})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 37741, 'g': 271710})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 54408, 'g': 10})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 71075, 'g': 71075})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 87741, 'g': 771710})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 104408, 'g': 10})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 15376, 'g': -90324})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 32043, 'g': 246762})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 48709, 'g': 535799})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 65376, 'g': -40324})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 82043, 'g': 796762})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 98709, 'g': 1085799})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 9677, 'g': 12})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 26344, 'g': 26344})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 43010, 'g': 410420})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 59677, 'g': 12})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 76344, 'g': 76344})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 93010, 'g': 1010420})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 3978, 'g': 51714})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 20645, 'g': -85055})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 37312, 'g': 379343})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 53978, 'g': 701714})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 70645, 'g': -35055})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 87312, 'g': 1029343})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 103978, 'g': 1351714})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 14946, 'g': 14946})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 31612, 'g': 336868})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 48279, 'g': 14})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 64946, 'g': 64946})\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 81612, 'g': 1036868})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 98279, 'g': 14})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 9247, 'g': -96453})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 25914, 'g': 282995})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 42580, 'g': 638700})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 59247, 'g': -46453})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 75914, 'g': 1032995})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 92580, 'g': 1388700})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 3548, 'g': 16})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 20215, 'g': 20215})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 36881, 'g': 484396})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 53548, 'g': 16})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 70215, 'g': 70215})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 86881, 'g': 1284396})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 103548, 'g': 16})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 14516, 'g': -91184})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 31183, 'g': 424394})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 47849, 'g': 813433})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 64516, 'g': -41184})\n",
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 81183, 'g': 1274394})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {'a': 1,\n",
+       "             'b': 105700,\n",
+       "             'c': 122700,\n",
+       "             'd': 17,\n",
+       "             'e': 81183,\n",
+       "             'f': 0,\n",
+       "             'g': 81183})"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def part_one(instructions, verbose=False):\n",
+    "    \"\"\"goes through instructions and perfoms them as per part one\"\"\"\n",
+    "    \n",
+    "    registers = defaultdict(int)\n",
+    "    registers[\"a\"] = 1\n",
+    "    i = 0\n",
+    "    loops = 0\n",
+    "    total_instructions = len(instructions)\n",
+    "    \n",
+    "    while i >=0 and i < total_instructions:\n",
+    "        \n",
+    "        # first, parse instruction\n",
+    "        f = instructions[i].split()\n",
+    "        if verbose: print(i, f)\n",
+    "        func = f[0]\n",
+    "        \n",
+    "        try:\n",
+    "            x = int(f[1])\n",
+    "        except:\n",
+    "            x = f[1]\n",
+    "\n",
+    "        if len(f) == 3:\n",
+    "            try:\n",
+    "                y = int(f[2])\n",
+    "            except:\n",
+    "                y = f[2]\n",
+    "        \n",
+    "        # now to run the func code\n",
+    "        if func == \"set\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] = y\n",
+    "        elif func == \"add\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] += y\n",
+    "        elif func == \"mul\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] = registers[x] * y\n",
+    "        elif func == \"sub\":\n",
+    "            y = registers[y] if type(y) is str else y\n",
+    "            registers[x] -= y\n",
+    "        elif func == \"jnz\":\n",
+    "            x = registers[x] if type(x) is str else x\n",
+    "            if x != 0:\n",
+    "                i += registers[y] if type(y) is str else y\n",
+    "                if verbose: print(f\"jumping to {i}\")\n",
+    "                # now to skip the i += step below\n",
+    "                continue\n",
+    "                \n",
+    "        i += 1\n",
+    "        loops += 1\n",
+    "        if loops % 100_000 == 0:\n",
+    "            print(registers)\n",
+    "        if loops > 10_000_000:\n",
+    "            break\n",
+    "\n",
+    "    return registers\n",
+    "\n",
+    "part_one(puzzle_input, verbose=False)"
    ]
   },
   {
