started day 23 part 2, stuck at optimization

--- a/Day 23 - Coprocessor Conflagration.ipynb
+++ b/Day 23 - Coprocessor Conflagration.ipynb
@@ -24,25 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['set b 57',\n",
-       " 'set c b',\n",
-       " 'jnz a 2',\n",
-       " 'jnz 1 5',\n",
-       " 'mul b 100',\n",
-       " 'sub b -100000',\n",
-       " 'set c b',\n",
-       " 'sub c -17000',\n",
-       " 'set f 1',\n",
-       " 'set d 2']"
+       "['set b 57', 'set c b', 'jnz a 2', 'jnz 1 5']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,32 +43,12 @@
     "with open('puzzle_inputs/day23_input.txt') as f:\n",
     "    data = f.read().strip().split(\"\\n\")\n",
     "puzzle_input = [line for line in data]\n",
-    "puzzle_input[:10]"
+    "puzzle_input[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(puzzle_input)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +63,10 @@
        "              'f': 0,\n",
        "              'g': 0,\n",
        "              'h': 1}),\n",
-       " 3025)"
+       " defaultdict(int, {'jnz': 6110, 'mul': 3025, 'set': 6167, 'sub': 9187}))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +80,7 @@
     "    registers = defaultdict(int)\n",
     "    i = 0\n",
     "    total_instructions = len(instructions)\n",
-    "    mul_runs = 0\n",
+    "    func_call_counter = defaultdict(int)\n",
     "    \n",
     "    while i >=0 and i < total_instructions:\n",
     "        \n",
@@ -117,6 +88,7 @@
     "        f = instructions[i].split()\n",
     "        if verbose: print(i, f)\n",
     "        func = f[0]\n",
+    "        func_call_counter[func] += 1\n",
     "        \n",
     "        try:\n",
     "            x = int(f[1])\n",
@@ -133,13 +105,9 @@
     "        if func == \"set\":\n",
     "            y = registers[y] if type(y) is str else y\n",
     "            registers[x] = y\n",
-    "        elif func == \"add\":\n",
-    "            y = registers[y] if type(y) is str else y\n",
-    "            registers[x] += y\n",
     "        elif func == \"mul\":\n",
     "            y = registers[y] if type(y) is str else y\n",
     "            registers[x] = registers[x] * y\n",
-    "            mul_runs += 1\n",
     "        elif func == \"sub\":\n",
     "            y = registers[y] if type(y) is str else y\n",
     "            registers[x] -= y\n",
@@ -153,7 +121,7 @@
     "                \n",
     "        i += 1\n",
     "\n",
-    "    return registers, mul_runs\n",
+    "    return registers, func_call_counter\n",
     "\n",
     "part_one(puzzle_input, verbose=False)"
    ]
@@ -179,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -242,74 +210,20 @@
       "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 54408, 'g': 10})\n",
       "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 71075, 'g': 71075})\n",
       "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 87741, 'g': 771710})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 104408, 'g': 10})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 15376, 'g': -90324})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 32043, 'g': 246762})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 48709, 'g': 535799})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 65376, 'g': -40324})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 82043, 'g': 796762})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 11, 'e': 98709, 'g': 1085799})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 9677, 'g': 12})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 26344, 'g': 26344})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 43010, 'g': 410420})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 59677, 'g': 12})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 76344, 'g': 76344})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 12, 'e': 93010, 'g': 1010420})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 3978, 'g': 51714})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 20645, 'g': -85055})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 37312, 'g': 379343})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 53978, 'g': 701714})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 70645, 'g': -35055})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 87312, 'g': 1029343})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 13, 'e': 103978, 'g': 1351714})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 14946, 'g': 14946})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 31612, 'g': 336868})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 48279, 'g': 14})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 64946, 'g': 64946})\n"
+      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 104408, 'g': 10})\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 81612, 'g': 1036868})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 14, 'e': 98279, 'g': 14})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 9247, 'g': -96453})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 25914, 'g': 282995})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 42580, 'g': 638700})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 59247, 'g': -46453})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 75914, 'g': 1032995})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 15, 'e': 92580, 'g': 1388700})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 3548, 'g': 16})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 20215, 'g': 20215})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 36881, 'g': 484396})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 53548, 'g': 16})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 70215, 'g': 70215})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 86881, 'g': 1284396})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 16, 'e': 103548, 'g': 16})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 14516, 'g': -91184})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 31183, 'g': 424394})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 47849, 'g': 813433})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 64516, 'g': -41184})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 17, 'e': 81183, 'g': 1274394})\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-d2c696351ac4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mregisters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m \u001b[0mpart_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpuzzle_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-44-d2c696351ac4>\u001b[0m in \u001b[0;36mpart_one\u001b[0;34m(instructions, verbose)\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mfunc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"mul\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m             \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m             \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mfunc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"sub\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(int,\n",
-       "            {'a': 1,\n",
-       "             'b': 105700,\n",
-       "             'c': 122700,\n",
-       "             'd': 17,\n",
-       "             'e': 81183,\n",
-       "             'f': 0,\n",
-       "             'g': 81183})"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -346,9 +260,6 @@
     "        if func == \"set\":\n",
     "            y = registers[y] if type(y) is str else y\n",
     "            registers[x] = y\n",
-    "        elif func == \"add\":\n",
-    "            y = registers[y] if type(y) is str else y\n",
-    "            registers[x] += y\n",
     "        elif func == \"mul\":\n",
     "            y = registers[y] if type(y) is str else y\n",
     "            registers[x] = registers[x] * y\n",
@@ -373,6 +284,53 @@
     "    return registers\n",
     "\n",
     "part_one(puzzle_input, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "looking at how to optimize this:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## making the instructions more efficent\n",
+    "\n",
+    "- 'set b 57',\n",
+    "- 'set c b',\n",
+    "- 'jnz a 2',\n",
+    "- 'jnz 1 5',\n",
+    "    - 'mul b 100',\n",
+    "    - 'sub b -100000',\n",
+    "    - 'set c b',\n",
+    "    - 'sub c -17000',\n",
+    "- 'set f 1',\n",
+    "- 'set d 2',\n",
+    "    - 'set e 2',\n",
+    "        - 'set g d',\n",
+    "        - 'mul g e',\n",
+    "        - 'sub g b',\n",
+    "        - 'jnz g 2',\n",
+    "            - 'set f 0',\n",
+    "        - 'sub e -1',\n",
+    "        - 'set g e',\n",
+    "        - 'sub g b',\n",
+    "    - 'jnz g -8',\n",
+    "        - 'sub d -1',\n",
+    "        - 'set g d',\n",
+    "        - 'sub g b',\n",
+    "- 'jnz g -13',\n",
+    "- 'jnz f 2',\n",
+    "    - 'sub h -1',\n",
+    "- 'set g b',\n",
+    "- 'sub g c',\n",
+    "- 'jnz g 2',\n",
+    "- 'jnz 1 3',\n",
+    "- 'sub b -17',\n",
+    "- 'jnz 1 -23'"
    ]
   },
   {
